# python-project

./: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  NOTICES.md  README.md  pyproject.toml  setup.sh
.devcontainer/: devcontainer.json
.github/workflows/: unit_tests.yaml
my_package/: __main__.py  main.py
test/: test_main.py
